--- a/love/src/components/AuxTel/Mount/LightPath.module.css
+++ b/love/src/components/AuxTel/Mount/LightPath.module.css
@@ -1,5 +1,4 @@
 .container {
-  width: 25em;
   z-index: 1;
 }
 
